apps/media-server/qbitt/qbitt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbitt
  namespace: media
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  selector:
    app: qbitt
  ports:
    - name: web
      port: 80          # Port on the Service
      targetPort: 8080    # Port on the qBittorrent container
      nodePort: 30105
    - name: http-proxy
      port: 8888        # HTTP proxy port for Jackett
      targetPort: 8888  # Port on the Gluetun container
