apps/media-server/qbitt/qbitt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbitt
  namespace: media
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: qbitt
      http:
        paths:
          - path: /
            pathTy  pe: Prefix
            backend:
              service:
                name: qbitt
                port:
                  number: 80
  tls:
    - hosts:
        - qbitt
